[tool.poetry]
name = "pubmed_scraper"
version = "0.1.0"
description = "PubMed scraper for keyword search and URL extraction"
authors = ["Fer Aguirre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.0.3"
nbformat = "^5.1.3"
pandas = "^1.3.0"
numpy = "^1.21.0"
requests = "^2.26.0"
plotly = "^5.3.1"
openpyxl = "^3.0.9"
paperscraper = "^0.2.13"
pymed = "^0.8.9"
playwright = "^1.44.0"
tqdm = "^4.66.4"
nest-asyncio = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
